# xai-med-classifier

./: .gitignore  AGENTS.md  CITATION.cff  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: default.yaml
configs/experiments/: quick_smoke.yaml
docs/: dataset_card.md  model_card.md  reproducibility.md  xai_methodology.md
notebooks/: 01_dataset_analysis_training_eval.ipynb  01_quickstart.ipynb
scripts/: download_data.py  eval.py  explain.py  make_report.py  train.py
src/xaimed/: __init__.py  cli.py  seed.py
src/xaimed/data/: __init__.py  medmnist.py
src/xaimed/eval/: __init__.py  calibration.py  error_analysis.py  evaluate.py
src/xaimed/models/: __init__.py  factory.py  heads.py
src/xaimed/reporting/: __init__.py  make_failure_gallery.py  make_report.py
src/xaimed/train/: __init__.py  loops.py  train.py
src/xaimed/utils/: __init__.py  io.py  metrics.py  viz.py
src/xaimed/xai/: __init__.py  explain.py  gradcam.py  integrated_gradients.py  sanity_checks.py
tests/: test_data_module.py  test_eval_pipeline.py  test_eval_utils.py  test_explain_pipeline.py  test_failure_gallery.py  test_gradcam.py  test_io_and_cli.py  test_train_pipeline.py
tests/fixtures/: eval_config.yaml  explain_config.yaml  train_config.yaml
tests/tests/: test_model_factory.py
