[project]
name = "xaimed"
version = "0.1.0"
description = "Explainable Medical Classifier using MedMNIST"
authors = [
    {name = "Almouhannad Hafez", email = "almouhannad.hafez@gmail.com"}
]
dependencies = [
    "PyYAML>=6.0",
]

[tool.ruff]

[tool.black]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
